yamls/ingress-common.yaml
#ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-canary-a
  namespace: canary
spec:
  rules:
  # 访问这个域名即可访问服务
  - host: canary.mooc.com
    http:
      paths:
      - path: /
        backend:
          # 要转发Service的名称（注意：这个Service要提前创建好，我们的这个在上面已经创建好了）
          serviceName: web-canary-a
          # 要转发Service的端口
          servicePort: 80
